--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -4,6 +4,12 @@
 
 {% block content %}
 <h1>Im the Portfolio.</h1>
+
+{% load static %}
+
+<!-- <a href="{% static 'portifolio/my_archive.pdf' %}">Resume</a>  se vc quiser um pdf no site-->
+
+<img src="{% static 'portifolio/ney.webp' %}" style="width: 400px; height: 400px;">
 {% for i in projects %}
     <h2>{{ i.title }}</h2>
     <p>{{ i.description }}</p>
