--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -4,5 +4,7 @@
 
 {% block content %}
 <h1>{{ blog.title }}</h1>
-{{ blog.description }}
+
+<h2>--{{ blog.date_post|date:'F jS Y' }}--</h2>
+{{ blog.description|safe }}
 {% endblock %}
