--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -2,10 +2,17 @@
 
 {% block title %}Blog{% endblock %}
 
+
 {% block content %}
+
 <h1>Blog</h1>
+
+<h2>Arthur has written {{ blog.count }} blog{{ blog.count|pluralize }}</h2>
+
 <br>
 {% for i in blog %}
     <a href="{{i.id}}"><h2>{{ i.title }}</h2></a>
+    <h5>{{ i.date_post|date:'M d Y'|upper}}</h5>
+    <p>{{ i.description|truncatechars:50 }}</p>
 {% endfor %}
 {% endblock %}
