--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,12 @@
   <body>
     <div class="container">
         <div class="pt-2 pb-0">
-            <ul class="nav justify-content-end">
+            <ul class="nav nav-pills nav-fill">
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'portifolio:index' %}">Portifolio</a>
+                    <a class="nav-link" href="{% url 'portifolio:index' %}">Portifolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'portifolio:index' %}">LinkedIn</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'blog:index' %}">Blog</a>
